[package]
name = "xtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["blocking"] }
zip = "1.1.1"
serde = { version = "1.0.201", features = ["derive"]} 
serde_json = "1.0.117"
convert_case = "0.6.0"
csv = "1.3.0"
